tests/NormalTests/paczka2/big_fuzzy/80678785.err
Error in line 1: A545 A650 95,0
Error in line 10: GYrGvtpUyR A650 1214
Error in line 17: rsgCLNnrZA S453 9,4
Error in line 6: GYrGvtpUyR A650 68,6
Error in line 12: HhxIkaw A650 68,2
Error in line 16: 9vEcbqsrwA A650 25,9
Error in line 24: HhxIkaw S453 65,5
Error in line 33: A545 A545 5,7
Error in line 37: jki A545 68,3
Error in line 54: Ug4iT15 A650 15,0
Error in line 56: jki S453 6,0
Error in line 51: 9vEcbqsrwA A628 78,5
Error in line 75: jki A628 63,3
Error in line 81: GYrGvtpUyR A628 21,4
Error in line 77: 9vEcbqsrwA S453 48,1
Error in line 93: rsgCLNnrZA A628 35,56
Error in line 96: Ug4iT15 A545 98,7
Error in line 95: rsgCLNnrZA A628 104,3
Error in line 127: Ug4iT15 A628 49,8
Error in line 129: Ug4iT15 S453 79,8
Error in line 130: HhxIkaw A650 94,9
Error in line 133: Ug4iT15 A628 28,6
Error in line 123: rsgCLNnrZA A650 153,6
Error in line 143: HhxIkaw S453 3,0
Error in line 146: jki A628 103,54
Error in line 132: A545 S453 258,2
Error in line 152: A545 S453 28,5
Error in line 157: jki A628 76,55
Error in line 156: A545 A545 63,9
Error in line 158: A545 A650 94,4
Error in line 168: Ug4iT15 A628 92,8
Error in line 140: rsgCLNnrZA A628 233,2
Error in line 169: jki S453 82,3
Error in line 180: Ug4iT15 A628 38,5
Error in line 196: HhxIkaw A628 53,5
Error in line 210: 9vEcbqsrwA A545 46,6
Error in line 218: A545 A628 70,8
Error in line 244: HhxIkaw A650 52,6
